tests/algorithms/x/C/graphs/tarjans_scc.c
// Generated by Mochi 0.10.32 on 2025-08-16 11:14 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <unistd.h>
#include <malloc.h>

size_t tarjan_len;
size_t *tarjan_lens;
size_t create_graph_len;
size_t *create_graph_lens;

size_t _slice_int_len;
size_t append_len;
static char* str_int(long long v) {
    char buf[32];
    snprintf(buf, sizeof(buf), "%lld", v);
    return strdup(buf);
}

static char* str_list_int(const long long *arr, size_t len) {
    size_t cap = len * 32 + 2;
    char *buf = malloc(cap);
    size_t pos = 0;
    buf[pos++] = '[';
    for (size_t i = 0; i < len; i++) {
        char tmp[32];
        snprintf(tmp, sizeof(tmp), "%lld", arr[i]);
        size_t n = strlen(tmp);
        if (pos + n + 2 >= cap) { cap = cap * 2 + n + 2; buf = realloc(buf, cap); }
        memcpy(buf + pos, tmp, n);
        pos += n;
        if (i + 1 < len) buf[pos++] = ' ';
    }
    buf[pos++] = ']';
    buf[pos] = 0;
    return buf;
}

static char* str_list_list_int(long long **arr, size_t len, const size_t lens[]) {
    size_t cap = 2;
    for (size_t i = 0; i < len; i++) cap += lens[i] * 32 + 3;
    char *buf = malloc(cap);
    size_t pos = 0;
    buf[pos++] = '[';
    for (size_t i = 0; i < len; i++) {
        char *inner = str_list_int(arr[i], lens[i]);
        size_t n = strlen(inner);
        if (pos + n + 2 >= cap) { cap = cap * 2 + n + 2; buf = realloc(buf, cap); }
        memcpy(buf + pos, inner, n);
        pos += n;
        free(inner);
        if (i + 1 < len) buf[pos++] = ' ';
    }
    buf[pos++] = ']';
    buf[pos] = 0;
    return buf;
}

static long long* list_append_int_new(const long long *arr, size_t len, long long val) {
    long long *res = malloc((len + 1) * sizeof(long long));
    if (arr && len) memcpy(res, arr, len * sizeof(long long));
    res[len] = val;
    append_len = len + 1;
    return res;
}

static long long** list_append_intptr(long long **arr, size_t *len, long long *val) {
    arr = realloc(arr, (*len + 1) * sizeof(long long*));
    arr[*len] = val;
    (*len)++;
    return arr;
}

static size_t* list_append_szt(size_t *arr, size_t *len, size_t val) {
    arr = realloc(arr, (*len + 1) * sizeof(size_t));
    arr[*len] = val;
    (*len)++;
    return arr;
}

#include <time.h>
static int seeded_now = 0;
static long long now_seed = 0;
static long long _now(void) {
    if (!seeded_now) {
        const char *s = getenv("MOCHI_NOW_SEED");
        if (s && *s) {
            now_seed = atoll(s);
            seeded_now = 1;
        }
    }
    if (seeded_now) {
        now_seed = (now_seed * 1664525 + 1013904223) % 2147483647;
        return now_seed;
    }
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (long long)(ts.tv_sec * 1000000000LL + ts.tv_nsec);
}

static long long _mem(void) {
    long long size = 0, rss = 0;
    FILE *f = fopen("/proc/self/statm", "r");
    if (f) {
        if (fscanf(f, "%lld %lld", &size, &rss) != 2) rss = 0;
        fclose(f);
    }
    return rss * (long long)sysconf(_SC_PAGESIZE);
}

static void panic(const char *msg) {
    fputs(msg, stderr);
    fputc('\n', stderr);
    exit(1);
}

static long long* _slice_int(const long long *arr, size_t len, int start, int end, size_t *out_len) {
    if (start < 0) start = 0;
    if ((size_t)end > len) end = len;
    if (start > end) start = end;
    size_t n = end - start;
    long long *res = NULL;
    if (n) {
        res = malloc(n * sizeof(long long));
        memcpy(res, arr + start, n * sizeof(long long));
    }
    *out_len = n;
    _slice_int_len = n;
    return res;
}

static long long* list_append_long_long(long long *arr, size_t *len, long long val) {
    arr = realloc(arr, (*len + 1) * sizeof(long long));
    arr[*len] = val;
    (*len)++;
    return arr;
}

long long * * tarjan(long long * * g, size_t g_len, size_t* g_lens, size_t g_lens_len);
long long _strong_connect(long long * index_of, size_t index_of_len, long long * lowlink_of, size_t lowlink_of_len, long long * stack, size_t stack_len, long long v, long long index);
long long * * create_graph(long long n, long long * * edges, size_t edges_len, size_t* edges_lens, size_t edges_lens_len);
void user_main();
int main(void);

long long * * tarjan(long long * * g, size_t g_len, size_t* g_lens, size_t g_lens_len) {
    long long n = g_len;
    long long *stack = NULL;
    size_t stack_len = 0;
    long long *on_stack = NULL;
    size_t on_stack_len = 0;
    long long *index_of = NULL;
    size_t index_of_len = 0;
    long long *lowlink_of = NULL;
    size_t lowlink_of_len = 0;
    long long i = 0LL;
    while (i < n) {
        on_stack = list_append_long_long(on_stack, &on_stack_len, 0LL);
        index_of = list_append_long_long(index_of, &index_of_len, -1LL);
        lowlink_of = list_append_long_long(lowlink_of, &lowlink_of_len, -1LL);
        i = i + 1LL;
    }
    long long **components = NULL;
    size_t components_len = 0;
    size_t *components_lens = NULL;
    size_t components_lens_len = 0;
    long long v = 0LL;
    while (v < n) {
        if (index_of[(int)({long long _mochi_idx = v; _mochi_idx < 0 ? index_of_len + _mochi_idx : _mochi_idx;})] == (0LL - 1LL)) {
            _strong_connect((long long[])v, v_len, 0LL, 0);
        }
        v = v + 1LL;
    }
    return tarjan_lens = components_lens, tarjan_len = components_len, components;
}

long long _strong_connect(long long * index_of, size_t index_of_len, long long * lowlink_of, size_t lowlink_of_len, long long * stack, size_t stack_len, long long v, long long index) {
    index_of[(int)(v)] = index;
    lowlink_of[(int)(v)] = index;
    long long current_index = index + 1LL;
    stack = list_append_long_long(stack, &stack_len, v);
    on_stack[(int)(v)] = 1LL;
    {
        long long* __tmp0 = g[(int)({long long _mochi_idx = v; _mochi_idx < 0 ? g_len + _mochi_idx : _mochi_idx;})];
        size_t __tmp0_len = g_lens[v];
        for (size_t __i = 0; __i < __tmp0_len; __i++) {
            long long w = __tmp0[__i];
            if (index_of[(int)({long long _mochi_idx = w; _mochi_idx < 0 ? index_of_len + _mochi_idx : _mochi_idx;})] == (0LL - 1LL)) {
                current_index = strong_connect(w, current_index);
                if (lowlink_of[(int)({long long _mochi_idx = w; _mochi_idx < 0 ? lowlink_of_len + _mochi_idx : _mochi_idx;})] < lowlink_of[(int)({long long _mochi_idx = v; _mochi_idx < 0 ? lowlink_of_len + _mochi_idx : _mochi_idx;})]) {
                    lowlink_of[(int)(v)] = lowlink_of[(int)({long long _mochi_idx = w; _mochi_idx < 0 ? lowlink_of_len + _mochi_idx : _mochi_idx;})];
                }
            } else {
                if (on_stack[(int)({long long _mochi_idx = w; _mochi_idx < 0 ? on_stack_len + _mochi_idx : _mochi_idx;})]) {
                    if (lowlink_of[(int)({long long _mochi_idx = w; _mochi_idx < 0 ? lowlink_of_len + _mochi_idx : _mochi_idx;})] < lowlink_of[(int)({long long _mochi_idx = v; _mochi_idx < 0 ? lowlink_of_len + _mochi_idx : _mochi_idx;})]) {
                        lowlink_of[(int)(v)] = lowlink_of[(int)({long long _mochi_idx = w; _mochi_idx < 0 ? lowlink_of_len + _mochi_idx : _mochi_idx;})];
                    }
                }
            }
        }
    }
    if (lowlink_of[(int)({long long _mochi_idx = v; _mochi_idx < 0 ? lowlink_of_len + _mochi_idx : _mochi_idx;})] == index_of[(int)({long long _mochi_idx = v; _mochi_idx < 0 ? index_of_len + _mochi_idx : _mochi_idx;})]) {
        long long *component = NULL;
        size_t component_len = 0;
        long long w = stack[(int)({long long _mochi_idx = stack_len - 1LL; _mochi_idx < 0 ? stack_len + _mochi_idx : _mochi_idx;})];
        stack = _slice_int(stack, stack_len, 0LL, stack_len - 1LL, &(_slice_int_len));
        stack_len = _slice_int_len;
        on_stack[(int)(w)] = 0LL;
        component = list_append_long_long(component, &component_len, w);
        while (w != v) {
            w = stack[(int)({long long _mochi_idx = stack_len - 1LL; _mochi_idx < 0 ? stack_len + _mochi_idx : _mochi_idx;})];
            stack = _slice_int(stack, stack_len, 0LL, stack_len - 1LL, &(_slice_int_len));
            stack_len = _slice_int_len;
            on_stack[(int)(w)] = 0LL;
            component = list_append_long_long(component, &component_len, w);
        }
        components = list_append_intptr(components, &components_len, component);
        components_lens = list_append_szt(components_lens, &components_lens_len, component_len);
    }
    return current_index;
}

long long * * create_graph(long long n, long long * * edges, size_t edges_len, size_t* edges_lens, size_t edges_lens_len) {
    long long **g = NULL;
    size_t g_len = 0;
    size_t *g_lens = NULL;
    size_t g_lens_len = 0;
    long long i = 0LL;
    while (i < n) {
        g = list_append_intptr(g, &g_len, ({long long* tmp = malloc(0 * sizeof(long long)); tmp;}));
        g_lens = list_append_szt(g_lens, &g_lens_len, 0);
        i = i + 1LL;
    }
    for (size_t __i = 0; __i < edges_len; __i++) {
        long long *e = edges[__i];
        size_t e_len = edges_lens[__i];
        long long u = e[(int)({long long _mochi_idx = 0LL; _mochi_idx < 0 ? e_len + _mochi_idx : _mochi_idx;})];
        long long v = e[(int)({long long _mochi_idx = 1LL; _mochi_idx < 0 ? e_len + _mochi_idx : _mochi_idx;})];
        g[(int)(u)] = list_append_int_new(g[(int)({long long _mochi_idx = u; _mochi_idx < 0 ? g_len + _mochi_idx : _mochi_idx;})], g.lens[(int)(u)], v);
    }
    return create_graph_lens = g_lens, create_graph_len = g_len, g;
}

void user_main() {
    long long n_vertices = 7LL;
    long long *source = NULL;
    size_t source_len = 0;
    source = list_append_long_long(source, &source_len, 0LL);
    source = list_append_long_long(source, &source_len, 0LL);
    source = list_append_long_long(source, &source_len, 1LL);
    source = list_append_long_long(source, &source_len, 2LL);
    source = list_append_long_long(source, &source_len, 3LL);
    source = list_append_long_long(source, &source_len, 3LL);
    source = list_append_long_long(source, &source_len, 4LL);
    source = list_append_long_long(source, &source_len, 4LL);
    source = list_append_long_long(source, &source_len, 6LL);
    long long *target = NULL;
    size_t target_len = 0;
    target = list_append_long_long(target, &target_len, 1LL);
    target = list_append_long_long(target, &target_len, 3LL);
    target = list_append_long_long(target, &target_len, 2LL);
    target = list_append_long_long(target, &target_len, 0LL);
    target = list_append_long_long(target, &target_len, 1LL);
    target = list_append_long_long(target, &target_len, 4LL);
    target = list_append_long_long(target, &target_len, 5LL);
    target = list_append_long_long(target, &target_len, 6LL);
    target = list_append_long_long(target, &target_len, 5LL);
    long long **edges = NULL;
    size_t edges_len = 0;
    size_t *edges_lens = NULL;
    size_t edges_lens_len = 0;
    long long i = 0LL;
    while (i < 9LL) {
        edges = list_append_intptr(edges, &edges_len, ({long long* tmp = malloc(2 * sizeof(long long)); tmp[0] = source[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? source_len + _mochi_idx : _mochi_idx;})]; tmp[1] = target[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? target_len + _mochi_idx : _mochi_idx;})]; tmp;}));
        edges_lens = list_append_szt(edges_lens, &edges_lens_len, 2);
        i = i + 1LL;
    }
    long long **g = create_graph(n_vertices, edges, edges_len, edges_lens, edges_len);
    size_t g_len = create_graph_len;
    size_t *g_lens = create_graph_lens;
    size_t g_lens_len = create_graph_len;
    puts(({long long **__tmp2 = tarjan(g, g_len, g_lens, g_len); char *__res = str_list_list_int(__tmp2, tarjan_len, tarjan_lens); __res;}));
}

int main(void) {
    {
        long long __start = _now();
        user_main();
        long long __end = _now();
        long long __dur_us = (__end - __start) / 1000;
        long long __mem_bytes = _mem();
        printf("{\n  \"duration_us\": %-lld,\n  \"memory_bytes\": %-lld,\n  \"name\": \"main\"\n}\n", __dur_us, __mem_bytes);
    }
    return 0;
}
